syntax = "proto3";

package sum;

option go_package = "go_course_pb";

message SumRequest {
    int32 firstNumber = 1;
    int32 secondNumber = 2;
}

message SumResponse {
    int64 sum = 1;
}
message PrimeNumberRequest {
    int32 number = 1;
}

message PrimeNumberResponse {
    int32 divisor = 1;
}

message AverageRequest {
    int64 number = 1;
}

message AverageResponse {
    double average = 1;
}

service GoCourseService {
    //Unary
    rpc Sum (SumRequest) returns (SumResponse) {};
    //Server streaming
    rpc PrimeNumber (PrimeNumberRequest) returns (stream PrimeNumberResponse) {};
    //Client streaming
    rpc LongAverage(stream AverageRequest) returns (AverageResponse) {};
}